Finished all configurations for mongodb with django

--- a/local.yml
+++ b/local.yml
@@ -3,6 +3,7 @@ version: '3'
 volumes:
   local_postgres_data: {}
   local_postgres_data_backups: {}
+  init-db:
 
 services:
   django:
@@ -10,9 +11,10 @@ services:
       context: .
       dockerfile: ./compose/local/django/Dockerfile
     image: caffeino_local_django
-    container_name: django
+    container_name: django_caffeino
     depends_on:
       - postgres
+      - mongo
     volumes:
       - .:/app:z
     env_file:
@@ -27,16 +29,37 @@ services:
       context: .
       dockerfile: ./compose/production/postgres/Dockerfile
     image: caffeino_production_postgres
-    container_name: postgres
+    container_name: postgres_caffeino
     volumes:
       - local_postgres_data:/var/lib/postgresql/data:Z
       - local_postgres_data_backups:/backups:z
     env_file:
       - ./.envs/.local/.postgres
 
+  mongo:
+    image: mongo
+    restart: always
+    ports:
+      - "27017:27017"
+    volumes:
+      - ./init-db/init-db.js:/docker-entrypoint-initdb.d/init-db.js:ro
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+      MONGO_INITDB_DATABASE: caffeino_db
+
+  mongo-express:
+    image: mongo-express
+    restart: always
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+
   docs:
     image: caffeino_local_docs
-    container_name: docs
+    container_name: docs_caffeino
     build:
       context: .
       dockerfile: ./compose/local/docs/Dockerfile
