--- a/local.yml
+++ b/local.yml
@@ -20,7 +20,6 @@ services:
     env_file:
       - ./.envs/.local/.django
       - ./.envs/.local/.postgres
-      - ./.envs/.local/.mongodb
     ports:
       - "8000:8000"
     command: /start
@@ -44,23 +43,19 @@ services:
       - "27017:27017"
     volumes:
       - ./init-db/init-db.js:/docker-entrypoint-initdb.d/init-db.js:ro
-    env_file:
-      - ./.envs/.local/.mongodb
     environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
-      MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE}
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+      MONGO_INITDB_DATABASE: caffeino_db
 
   mongo-express:
     image: mongo-express
     restart: always
     ports:
       - 8081:8081
-    env_file:
-      - ./.envs/.local/.mongodb
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_INITDB_ROOT_USERNAME}
-      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: example
 
   docs:
     image: caffeino_local_docs
